@@ -1,3 +1,8 @@
+2005-07-18  Ben Elliston  <bje@au.ibm.com>
+
+	* dwarf2.h (enum dwarf_type): Remove DW_AT_GNU_decimal_float.
+	Replace with DW_ATE_decimal_float (now in DWARF 3).
+
 2005-07-14  Jim Blandy  <jimb@redhat.com>
 
 	Add support for Renesas M32C and M16C.
